--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "input-otp": "^1.4.2",
     "lucide-react": "^0.562.0",
     "next": "14.2.5",
+    "next-theme": "^0.1.5",
     "next-themes": "^0.4.6",
     "react": "^18",
     "react-day-picker": "^9.13.0",
